--- a/app/Resources/views/cours/filAriane.html.twig
+++ b/app/Resources/views/cours/filAriane.html.twig
@@ -44,9 +44,9 @@
         }
 
         function hideFileAriane(){
-            /*$('.filArianeCourses').animate({
+            $('.filArianeCourses').animate({
                 opacity: 0
-            }, 300);*/
+            }, 300);
         }
     });
 </script>
