--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -152,6 +152,7 @@
                                 {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
                                     <li><a target="_blank" href="{{ path('sonata_admin_dashboard') }}">BackOffice</a></li>
                                     <li><a href="{{ path('emailing') }}">Emailing</a></li>
+                                    <li><a href="{{ path('statistiques') }}">Statistiques</a></li>
                                 {% endif %}
                                 {% block vueAdmin %}{% endblock %}
                                 <li><a href="{{ path('calendrier') }}">Mon calendrier</a></li>
