--- a/app/Resources/views/stats.html.twig
+++ b/app/Resources/views/stats.html.twig
@@ -17,15 +17,11 @@
     <script src="{{ asset('vendors/nvd3/build/nv.d3.min.js') }}" type=text/javascript></script>
     <script>
         jQuery(document).ready(function () {
-            var testdata = [
-                {key: "One", y: 5, color: "#5F5"},
-                {key: "Two", y: 2},
-                {key: "Three", y: 9},
-                {key: "Four", y: 7},
-                {key: "Five", y: 4},
-                {key: "Six", y: 3},
-                {key: "Seven", y: 0.5}
-            ];
+            var testdata = [];
+            $('.datas [data-types=cohortes]>[data-name]').each(function(){
+                testdata.push({key: $(this).attr('data-name'), y: $(this).find('.stats_datas_coh_inscrits [data-user]').length });
+            });
+            console.log(testdata)
             var height = 350;
             var width = 350;
             nv.addGraph(function() {
@@ -57,10 +53,14 @@
     </style>
     <div class="container mt-100 mb-40">
         <div class="datas">
-            <div data-datas="cohortes">
+            <div data-types="cohortes">
                 {% for key,val in cohortes %}
-                    <div data-name="{{ val.nom }}">
-
+                    <div data-name="{{ val.cohorte.nom }}">
+                        <div class="stats_datas_coh_inscrits">
+                            {% for key2,val2 in val.inscrits %}
+                                <div data-user="{{ val2.user.id }}">{{ val2.user.email }}</div>
+                            {% endfor %}
+                        </div>
                     </div>
                 {% endfor %}
             </div>
