Stats sauvegarde OK

--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -679,7 +679,7 @@
                                     <div class="fileUploader col-sm-6 col-xs-12">
                                         <span class="btn btn-success fileinput-button">
                                             <i class="glyphicon glyphicon-plus"></i>
-                                            <span>Déposer ma copie</span>
+                                            <span>Déposer ma copie (PDF ou word, 5MO maximum)</span>
                                             <input id="copieUpload" type="file" name="files[]" multiple>
                                         </span>
 
