--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1093,7 +1093,7 @@
                     }
                 });
 
-                $('.modal .modal-body[data-contentModal=uploadFile] .bginverse').empty().append(
+                /*$('.modal .modal-body[data-contentModal=uploadFile] .bginverse').empty().append(
                     '<div>' +
                         '<div class="mb-10" style="text-align: left">'+
                             '<div class="LabelAdmin col-xs-4">Nom du fichier</div>'+
@@ -1110,7 +1110,28 @@
                         '   <div class="progress-bar progress-bar-success"></div> '+
                         '</div> '+
                     '</div>'
+                );*/
+
+                $('.modal .modal-body[data-contentModal=uploadFile] .bginverse').empty().append(
+                        '<div>' +
+                            '<div class="mb-10" style="text-align: center">'+
+                                '<div class="LabelAdmin col-xs-8">Dézipper le fichier (le fichier index.html sera pointé par le lien)</div>'+
+                                '<input data-champName="unzipUploaded" class="col-xs-2" value="" type="checkbox" />'+
+                                '<input data-champName="uploadedFileName" class="col-xs-8" value="" type="text" />'+
+                            '</div>'+
+                        '</div>'+
+                        '<div class="fileUploader btn">' +
+                            '<span class="btn btn-success fileinput-button"> '+
+                                '<i class="glyphicon glyphicon-plus"></i> '+
+                                '<span>Ajouter un fichier</span> '+
+                                '<input id="itemUpload" type="file" name="files[]" multiple> '+
+                            '</span> '+
+                            '<div id="itemProgress" class="progress col-xs-12"> '+
+                                '<div class="progress-bar progress-bar-success"></div> '+
+                            '</div> '+
+                        '</div>'
                 );
+
 
                 $('.modal .modal-body[data-contentModal=uploadFile] [data-champName=uploadedFileName]').val(titreDefaut);
 
@@ -1138,6 +1159,8 @@
                                 async: false,
                                 dataType: "json",
                                 data: {
+                                    type: file.type,
+                                    unzipIfZip: $('[data-champName=unzipUploaded]').prop('checked'),
                                     typeItem: typeItem,
                                     itemId: devoirId,
                                     url: steps + folderLocation+myUrlTab[1],
@@ -1151,7 +1174,7 @@
                                         devoir.find('.btnSaveInputChange').addClass('mustReload');
                                         devoir.find('.btnSaveInputChange').click();
                                     }else{
-                                        refreshInSection(idSection);
+                                        //refreshInSection(idSection);
                                     }
                                 },
                                 error: function(xhr, status, error) {
@@ -1172,24 +1195,29 @@
                         .parent().addClass($.support.fileInput ? undefined : 'disabled');
             });
 
-            // tri de des liens
-            $('.sortableLiensInGroupe').sortable({
+            // tri des corrigés et des sujets
+            $('.sortableDevoirFile').sortable({
                 placeholder: "ui-state-highlight",
                 handle: ".btnMove",
                 cancel: ".notSortable",
                 stop: function (event, ui) {
-                    var arrayAssocs = [];
+                    var elementCible = "DevoirCorrigeType";
+                    if($(this).hasClass('sortableSujetDevoir')){
+                        elementCible = "DevoirSujet";
+                    }
+                    var arrayFile = [];
                     var itemDropped = ui.item;
-                    var id = itemDropped.attr('data-idLien');
-                    $(this).find('[data-idLien]').each(function(){
-                        arrayAssocs.push($(this).attr('data-idLien'));
+                    var id = itemDropped.attr('data-idFile');
+                    $(this).find('[data-idFile]').each(function(){
+                        arrayFile.push($(this).attr('data-idFile'));
                     });
 
                     $.ajax({
                         type: "POST",
-                        url: "{{path('sortGroupeLiensAssocs_ajax')}}",
+                        url: "{{path('sortDevoirFile_ajax')}}",
                         data: {
-                            arrayAssocs: arrayAssocs
+                            arrayFile: arrayFile,
+                            elementCible: elementCible
                         },
                         dataType: "json",
                         success: function (response) {
