Maintenance devoirs OK

--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1174,7 +1174,7 @@
                                         devoir.find('.btnSaveInputChange').addClass('mustReload');
                                         devoir.find('.btnSaveInputChange').click();
                                     }else{
-                                        //refreshInSection(idSection);
+                                        refreshInSection(idSection);
                                     }
                                 },
                                 error: function(xhr, status, error) {
